<resources>
    <string name="app_name">DevCard</string>
    <string name="introductionDialogTitle">Information</string>
    <string name="instructions">Welcome, with this app you can see my experience with
                different programming languages using a <b>fun and beautiful custom developer card </b>, Enjoy! </string>
    <string name="dontShowInstructionsAgain">Don\'t show again</string>
    <string name="dialogInstructionsTitle">Information </string>
    <string name="instructionsButton">Got it</string>
    <string name="aboutDialogTitle">%1$s %2$s</string>
    <string name="aboutMenuItem">About</string>
    <string name="positiveButtonInstructiosDialog">Got it</string>
    <string name="aboutMessage">Created by Mario learning with RayWenderlich :D</string>
    <string name="imageProgrammingLanguageDescription">Image of your preferred Programming Language</string>
    <string name="imagePreviousProgrammingLanguage">Previous Programming Languag</string>
    <string name="imageNextProgrammingLanguage">Next Programming Language</string>
    <string name="nameLabel">My Name:</string>
    <string name="experienceLabel">My experience:</string>
    <string name="imageFacebookDescription">Facebook Logo</string>
    <string name="imageInstagramDescription">Instagram Logo</string>
    <string name="imageTwitterDescription">Twitter Logo</string>
    <string name="lastElementNotification">You reached the last element!</string>
    <string name="firstElementNotification">You reached the first element!</string>
    <string name="contactMeOn">Contact Me On! (Click an icon :D)</string>
    <string name="myName">Mario Moreno</string>
</resources>
