<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logoProgrammingLanguage"
        android:layout_width="@dimen/width_image_logo"
        android:layout_height="@dimen/height_image_logo"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/imageProgrammingLanguageDescription"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_broken_image" />

    <TextView
        android:id="@+id/programmingLanguage"
        style="@style/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoProgrammingLanguage"
        tools:text="Kotlin" />

    <ImageView
        android:id="@+id/previousProgrammingLanguage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/imagePreviousProgrammingLanguage"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="@+id/logoProgrammingLanguage"
        app:layout_constraintEnd_toStartOf="@+id/logoProgrammingLanguage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/logoProgrammingLanguage"
        app:srcCompat="@drawable/ic_back" />

    <ImageView
        android:id="@+id/nextProgrammingLanguage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/imageNextProgrammingLanguage"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="@+id/logoProgrammingLanguage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/logoProgrammingLanguage"
        app:layout_constraintTop_toTopOf="@+id/logoProgrammingLanguage"

        app:srcCompat="@drawable/ic_next" />

    <ImageView
        android:id="@+id/facebookIcon"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/imageFacebookDescription"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/instagramIcon"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3"
        app:srcCompat="@drawable/ic_facebook" />

    <ImageView
        android:id="@+id/instagramIcon"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:contentDescription="@string/imageInstagramDescription"
        app:layout_constraintEnd_toStartOf="@+id/twitterIcon"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/facebookIcon"
        app:layout_constraintTop_toTopOf="@+id/facebookIcon"
        app:srcCompat="@drawable/ic_instagram" />

    <ImageView
        android:id="@+id/twitterIcon"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:contentDescription="@string/imageTwitterDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/instagramIcon"
        app:layout_constraintTop_toTopOf="@+id/instagramIcon"
        app:srcCompat="@drawable/ic_twitter" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    <TextView
        android:id="@+id/contactMeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contactMeOn"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/descriptionCardView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        app:strokeWidth="1dp"
        app:strokeColor="@color/colorPrimaryDark"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toTopOf="@+id/contactMeLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/programmingLanguage">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.35" />

            <TextView
                android:id="@+id/nameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:text="@string/nameLabel"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/experienceLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:text="@string/experienceLabel"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toBottomOf="@+id/nameLabel" />

            <TextView
                android:id="@+id/experience"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toTopOf="@+id/experienceLabel"
                tools:text="I love Kotlin because now It's the new language I'm learning for creating Android Apps with RayWenderlich" />

            <TextView
                android:id="@+id/name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/myName"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toTopOf="@+id/nameLabel"
                tools:text="Mario Moreno" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>